opam-version: "2.0"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://github.com/kandu/ml_snippets"
bug-reports: "https://github.com/kandu/ml_snippets/issues"
license: "MIT"
dev-repo: "git+https://github.com/kandu/ml_snippets.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "1.6.0"}
]

synopsis: "OCaml snippets for daily use"
